# robotics

./: compute_distance.cpp  sub_obs.cpp
Project/: lla2enu.tar.xz
Project/lla2enu/: CMakeLists.txt  package.xml
Project/lla2enu/cfg/: parametri.cfg
Project/lla2enu/launch/: param_set.launch  test_200.launch
Project/lla2enu/msg/: MyMessage.msg
Project/lla2enu/scripts/: lla2enu_py.py
Project/lla2enu/src/: client.cpp  compute_distance.cpp  compute_distance_old.cpp  pub_custom_msg.cpp  sub_car.cpp  sub_obs.cpp
Project/lla2enu/srv/: ComputeDistance.srv
